# RpgKataCoding

./: Checkers.py  Constants.py  DecoratorCharacter.py  README.md  Utils.py
cpp/: CMakeLists.txt  abstract_checker.hpp  character.cpp  character.hpp  checkers.hpp  combat_rules.cpp  combat_rules.hpp  constants.hpp  decorator_character.hpp  exceptions.hpp  melee_fighters_decorator.hpp  position.hpp  ranged_fighter_decorator.hpp  test.cpp
cpp/utils/: CMakeLists.txt
cpp/utils/include/: utils.hpp
python/: AbstractChecker.py  Character.py  CombatRules.py  driver.py
